--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     build: ./services/db
     restart: always
-    image : postgres:lastest
+    image : postgres:latest
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
@@ -19,9 +19,9 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgresql://user:password@cca-db-1:5432/analytics_db
+      DATABASE_URL: postgresql://user:password@db:5432/analytics_db
     volumes:
-      - ./data.csv:/app/data.csv    
+      - ./services/db/data.csv:/app/data.csv    
 
   analytics:
     build: ./services/analytics
@@ -31,3 +31,4 @@ services:
       DATABASE_URL: postgresql://user:password@db:5432/analytics_db
     ports:
       - "5000:5000"
+      - "8050:8050"  
